--- a/.github/workflows/build-scripts.yml
+++ b/.github/workflows/build-scripts.yml
@@ -12,10 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Create zip artifact
+      - name: Create artifact
         run: |
           mkdir output
-          zip -r output/scripts.zip powershell README.md
+          #zip -r output/scripts.zip powershell README.md
+          cp README.md output/
+          cp -r powershell output/
 
       - uses: actions/upload-artifact@v4
         with:
